Closed
Bug 1621748
Opened 6 years ago
Closed 6 years ago
Crash in [@ nsSHistory::GetRootSHEntry]
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
RESOLVED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | --- | unaffected |
| firefox75 | --- | unaffected |
| firefox76 | + | fixed |
People
(Reporter: calixte, Assigned: annyG)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-66e8e853-dafc-4b6d-ba2c-88c300200311.
Top 10 frames of crashing thread:
0 xul.dll static nsSHistory::GetRootSHEntry docshell/shistory/nsSHistory.cpp:359
1 xul.dll nsSHEntry::SyncTreesForSubframeNavigation docshell/shistory/nsSHEntry.cpp:1037
2 xul.dll nsSHEntry::SyncTreesForSubframeNavigation docshell/shistory/nsSHEntry.cpp:1058
3 xul.dll nsDocShell::SetHistoryEntry docshell/base/nsDocShell.cpp:11426
4 xul.dll nsDocShell::SetHistoryEntryAndUpdateBC docshell/base/nsDocShell.cpp:11388
5 xul.dll nsDocShell::Stop docshell/base/nsDocShell.cpp:4236
6 xul.dll nsDocShell::InternalLoad docshell/base/nsDocShell.cpp
7 xul.dll nsDocShell::LoadURI docshell/base/nsDocShell.cpp:823
8 xul.dll mozilla::dom::ContentChild::RecvLoadURI dom/ipc/ContentChild.cpp:4327
9 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:12812
There are 7 crashes (from 6 installations) in nightly 76 starting with buildid 20200310214454. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1546759.
[1] https://hg.mozilla.org/mozilla-central/rev?node=6ebc7618a5fa
Flags: needinfo?(agakhokidze)
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → agakhokidze
Flags: needinfo?(agakhokidze)
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
tracking-firefox76:
--- → +
Pushed by agakhokidze@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ededd346172e
Fix stale pointers when updating history entries consecutively, r=peterv
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•6 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•