Bug 1621748 - Fix stale pointers when updating history entries consecutively, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D66631

--HG--
extra : moz-landing-system : lando